--- a/src/Assests/Css/Home.css
+++ b/src/Assests/Css/Home.css
@@ -14,13 +14,13 @@ body{
     justify-content: flex-end;
     align-content: flex-end;
     height: 92vh;
-    width: 67vw;
+    width: 79vw;
     background-color: rgb(255, 255, 255);
-    /* margin-left: 7%; */
+    margin-left: 7%;
 }
 .text-home{
   height: 38vh;
-  width: 69vw;
+  width: 57vw;
   font-style: italic;
   font-size: 20px;
   border-radius: 20rem;
@@ -29,7 +29,7 @@ body{
   align-items: center;
   flex-direction: column;
   background-color: rgba(123, 211, 170, 0.768);
-  margin-left: 4%;
+  margin-right: 5%;
 }
 .inner-text{
   font-style: normal;
@@ -307,4 +307,3 @@ h1{
   flex-direction: column;
 
 }
-
