--- a/src/Assests/Css/signup2.css
+++ b/src/Assests/Css/signup2.css
@@ -12,7 +12,7 @@
     align-items: center;
     background-color: #b3eadcac;
     flex-direction: column;
-    height: 59vh;
+    height: 68vh;
     width: 26vw;
     padding: 20px;
     border-radius: 2rem;
@@ -43,5 +43,15 @@
     width: 100%; 
     padding: 10px; 
     font-size: 16px; 
+    border-color: aqua;
+    background-color: rgba(127, 255, 212, 0.899);
+    height: 4vh;
+    width: 5.5vw;
+    gap: 1rem;
   }
   
+  #termsCheckbox{
+    display: flex;
+    height: 3vh;
+    width: 3vw;
+  }
