--- a/src/Assests/Css/signup2.css
+++ b/src/Assests/Css/signup2.css
@@ -1,23 +1,25 @@
 .signup-container{
-    height: 90vh;
-    width: 100vw;
+    height: 115vh;
+    width: 99vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    /* background-color: blue; */
 }
 .signup-form {
     margin-right: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #b3eadcac;
+    /* background-color: #b3eadcac; */
     flex-direction: column;
-    height: 68vh;
-    width: 26vw;
+    height: 65vh;
+    width: 40vw;
     padding: 20px;
     border-radius: 2rem;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
+    box-shadow: 0px 1px 31px -1px rgb(91, 139, 126);
+    -webkit-box-shadow: 0px 1px 31px -8px rgb(91, 139, 126);
+    -moz-box-shadow: 0px 1px 31px -1px rgb(91, 139, 126);
     margin: 0 auto;  
 }
   
@@ -39,17 +41,7 @@
     font-size: 16px;
   }
   
-.button-signup {
-    width: 100%; 
-    padding: 10px; 
-    font-size: 16px; 
-    border-color: aqua;
-    background-color: rgba(127, 255, 212, 0.899);
-    height: 4vh;
-    width: 5.5vw;
-    gap: 1rem;
-  }
-  
+
   #termsCheckbox{
     display: flex;
     height: 3vh;
